# cpp-argsbarg

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  conanfile.py  feature-spec.md  justfile
.cursor/rules/: cpp.mdc
.github/workflows/: ci.yml
cmake/: argsbargConfig.cmake.in
examples/: CMakeLists.txt
examples/minimal/: CMakeLists.txt  justfile  main.cpp
examples/nested/: CMakeLists.txt  justfile  main.cpp
include/argsbarg/: application.hpp  argsbarg.hpp  builders.hpp  builtins.hpp  completion.hpp  context.hpp  help.hpp  parse.hpp  result.hpp  schema.hpp  schema_error.hpp  style.hpp
include/argsbarg/detail/: completion_bash_inline.hpp  completion_shared.hpp  completion_zsh_inline.hpp  help_formatter_inline.hpp  parse_inline.hpp
scripts/: release.py
test_package/: CMakeLists.txt  conanfile.py  example.cpp
tests/: CMakeLists.txt  test_completion.cpp  test_context.cpp  test_help.cpp  test_parse.cpp  test_smoke.cpp  test_style.cpp  test_validate.cpp
